# fastapi-structure

./: README.md  pyproject.toml  test.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: item.py  order.py  user.py
app/core/: config.py
app/crud/: item.py  order.py  user.py
app/db/: sql_ins.py
app/models/: author.py  book.py  book_author.py  item.py  order.py  user.py
app/schemas/: book.py  item.py  order.py  user.py
